# Winlator-Xmod

./: CMakeLists_optimized.txt  CRITICAL_OPTIMIZATIONS.cpp  README.md  prepare_proton10_assets.sh  vulkan_optimized.h  xconnector_optimized.h
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/graphics_driver/: wrapper-v3.tzst  wrapper.tzst
app/src/main/assets/inputcontrols/profiles/: controls-3.icp
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/winlator/: alsa_client.c  drawable.c  gpu_image.c  patchelf_wrapper.cpp  sysvshared_memory.c  vulkan.cpp  vulkan_optimized_minimal.cpp  xconnector_epoll.c
app/src/main/java/com/winlator/cmod/: MainActivity.java  (+5 more)
app/src/main/res/color/: bottom_nav_text_tint.xml
app/src/main/res/color-night/: bottom_nav_text_tint.xml
app/src/main/res/drawable/: button_background.xml  button_material_you.xml  button_material_you_dark.xml  combo_box_dark_fixed.xml  combo_box_material_you.xml  combo_box_material_you_dark.xml  content_dialog_background_material_you.xml  content_dialog_background_material_you_dark.xml  dialog_material_you.xml  dialog_material_you_dark.xml  edit_text_dark_fixed.xml  edit_text_material_you.xml
app/src/main/res/layout/: about_dialog.xml  big_picture_activity.xml  container_detail_fragment.xml  container_selection_dialog.xml  container_selection_item.xml  control_element_settings.xml  cpu_list_dialog.xml  debug_dialog.xml  dxvk_vkd3d_config_dialog.xml  env_vars_list_item.xml  export_advanced_options_dialog.xml  export_settings_dialog.xml  file_picker_dialog.xml  file_picker_item.xml  frame_rating.xml  graphics_driver_config_dialog.xml  main_activity.xml  screen_effect_dialog.xml  settings_fragment.xml  shortcut_create_dialog.xml  shortcut_settings_dialog.xml  shortcuts_fragment.xml
app/src/main/res/layout-land/: big_picture_activity.xml
app/src/main/res/menu/: bottom_nav_menu.xml  shortcut_popup_menu.xml  xserver_menu.xml
app/src/main/res/values/: arrays.xml  colors.xml  colors_alias.xml  colors_material_you.xml  strings.xml  styles.xml  styles_material_you.xml
app/src/main/res/values-night/: colors_alias.xml
app/src/main/res/values-v27/: styles.xml
app/src/main/res/values-v31/: colors.xml  styles.xml
scripts/: build_wrapper_xmod.sh
(+282 files in other folders)
